# learn-qt

./: .gitignore  .pre-commit-config.yaml  README.md
.github/workflows/: unittest.yaml
tutorial/menu-bar/: CMakeLists.txt  MenuBar.h  icons.qrc  main.cpp
